Fix nav bug + carousel white space

--- a/css/_carousel.scss
+++ b/css/_carousel.scss
@@ -25,10 +25,6 @@
     border-radius: 5px;
 }
 
-.carousel-inner {
-    height: 93vh;
-}
-
 .carousel-indicators {
     gap: 15px;
     button {
