--- a/css/_header.scss
+++ b/css/_header.scss
@@ -14,7 +14,6 @@
 .navbar {
     align-items: center;
     background-color: $color-primary !important;
-    height: 7vh;
 }
 
 .text-color {
